# Brain

./: .env.example  .gitignore  README.md  colab.ipynb  config.py  main.py  prompts.py  pyproject.toml
agents/: action_agent.py  direction_agent.py  goal_evaluator.py  memory_agent.py  orchestrator.py  qa_agent.py  search_agent.py  search_validator.py
core/: config.py  graph.py  prompts.py  state.py
memory/: agent.py  awareness.py  episodes.py  store.py
tools/: search.py
